Whitespace cleanup. Added failsafe config and cleaned up ITs.